# PhiStore

./: .gitignore  Generate-Default.py  README.md  environment.yml  log.txt  pyproject.toml  requirements-win.txt  requirements.txt  test.ipynb
.github/workflows/: desktop-and-mobile-builds.yml  web-build.yml
.obsidian/: app.json  appearance.json  community-plugins.json  community-plugins.json.alist_to_delete  core-plugins.json  templates.json  workspace-mobile.json  workspace.json
.obsidian/plugins/obsidian-admonition/: data.json
.obsidian/plugins/obsidian-git/: data.json
src/: PhiControls.py  default_json.py  main.py
src/assets/: default.json  default_json.py
