[project]
name = "PhiStore"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.2"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "PhiStore"

# company name to display in about app dialogs
company = "Tim & Pigeon Games"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Tim, Assets from Pigeon Games."

[tool.flet.app]
path = "src"

# [tool.flet.android.signing]
# 存储和密钥密码可以通过`--android-signing-key-store-password`
# 和`--android-signing-key-password`选项或
# FLET_ANDROID_SIGNING_KEY_STORE_PASSWORD
# 和 FLET_ANDROID_SIGNING_KEY_PASSWORD 环境变量传递。
key_store = "html5syt.jks" # --android-signing-key-store
key_alias = "html5syt"

[tool.flet.splash]
android = false