[project]
name = "PhiStore"
version = "0.1.0"
description = "PhiStore"
# readme = "README.md"
# requires-python = ">=3.8"
dependencies = [
  "flet"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "PhiStore"

# company name to display in about app dialogs
company = "Tim & Pigeon Games"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Tim, Assets from Pigeon Games."


[tool.flet.app]
path = "src"

# [tool.flet.android.signing]
# store and key passwords can be passed with `--android-signing-key-store-password`
# and `--android-signing-key-password` options or
# FLET_ANDROID_SIGNING_KEY_STORE_PASSWORD
# and FLET_ANDROID_SIGNING_KEY_PASSWORD environment variables.
key_store = "html5syt.jks" # --android-signing-key-store
key_alias = "html5syt"

[tool.flet.splash]
color = "#000000" # --splash-color
dark_color = "#000000" # --splash-dark-color
# web = false # --no-web-splash
ios = false # --no-ios-splash
android = false # --no-android-splash

flutter.dependencies = ["flet_audio"]